# hpp-baxter

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  package.xml  pyproject.toml
src/hpp/corbaserver/baxter/: __init__.py  robot.py
src/hpp/corbaserver/manipulation/baxter/: __init__.py  robot.py
srdf/: baxter.srdf  baxter_manipulation.srdf  box.srdf
urdf/: baxter.urdf  baxter_colman.urdf  box.urdf
