<package>
  <name>hpp-baxter</name>
  <version>0.1.0</version>
  <description>
    Wrappers for Baxter robot in HPP.
  </description>
  <author>Joseph Mirabel</author>
  <maintainer email="hpp@laas.fr">Joseph Mirabel</maintainer>
  <license>LGPL v2</license>
  <build_depend>hpp-corbaserver</build_depend>
</package>
