<package>
  <name>hpp-baxter</name>
  <version>4.14.0</version>
  <description>
    Wrappers for Baxter robot in HPP.
  </description>
  <author>Joseph Mirabel</author>
  <maintainer email="hpp@laas.fr">Joseph Mirabel</maintainer>
  <license>BSD</license>
  <test_depend>example-robot-data</test_depend>
  <exec_depend>example-robot-data</exec_depend>
</package>
