[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel[build]",
  "example-robot-data[build]"
]

[project]
dependencies = [
  "example-robot-data"
]
description = "Wrappers for Baxter robot in HPP."
license = "BSD-2-Clause"
name = "hpp-baxter"
version = "5.0.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
